@@ -10,6 +10,8 @@ v1.9.9
 * imdbXML class updated with a patch from the author
 + imdb::movieconnections() - added more connections (tnx to Qvist)
 ! IMDB Search did not work with the localized sites due to new domains used
+! imdb_person::filmograf did not catch characters if they had no link. Due
+  to changes on the IMDB sites, it in fact did no longer catch any character...
 
 v1.9.8 (02.12.2009)
 -------------------
